Get setup to begin processing images
This does a couple things:

* Brings in featherlight for a lightweight lightbox implementation
* Creates a command to process images into thumbnails

--- a/src/Resources/less/layout.less
+++ b/src/Resources/less/layout.less
@@ -1,15 +1,10 @@
-.header {
-  width: 100%;
-  height: 200px;
+body {
+  padding-top: 20px;
   background-color: #f2f2f2;
-  margin-bottom: 30px;
-
-  .header-img {
-    text-align: center;
-  }
 }
 
 .page-heading {
+  color: @blue;
   margin-top: 0;
 }
 
@@ -30,11 +25,8 @@
   .make-xs-column(6);
   margin-bottom: 10px;
 }
-
-.sidebar {
-  .make-md-column(3);
-}
-
 .content {
-  .make-md-column(9);
+  background-color: #fff;
+  padding-top: 15px;
+  .make-md-column(12);
 }
