--- a/src/Resources/less/site.less
+++ b/src/Resources/less/site.less
@@ -4,3 +4,5 @@
 // Defines the basic page structure
 @import 'variables.less';
 @import 'layout.less';
+@import 'header.less';
+@import (inline) 'featherlight.css';
