--- a/src/Resources/less/variables.less
+++ b/src/Resources/less/variables.less
@@ -1,1 +1,7 @@
 @fa-font-path: "../fonts";
+
+@brand-primary: #1a6bcc;
+@blue: #1e8de8;
+
+@headings-font-family: 'Oswald', sans-serif;
+@font-family-base: 'Roboto', sans-serif;
