--- a/src/Resources/views/home.html.twig
+++ b/src/Resources/views/home.html.twig
@@ -2,6 +2,11 @@
 
 {% block content %}
     <div class="row">
+        <div class="main-img-container">
+            <a href="images/keystone.jpg" class="thumbnail" data-featherlight="image">
+                <img src="images/keystone.jpg" height="180px" />
+            </a>
+        </div>
     {% for i in 0..20 %}
         <div class="main-img-container">
             <a href="#" class="thumbnail">
