--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -8,6 +8,7 @@
     <title>Home of Fred Dysart</title>
 
     <link href="css/site.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Oswald:700|Roboto' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -17,31 +18,30 @@
 <body>
 
 <div class="header">
-    <div class="header-img"></div>
+    <div class="brand">
+        <a href="/" alt="Fred Dysart">FRED DYSART</a>
+    </div>
+
+    <div class="links">
+        <ul class="list-inline">
+            <li><a href="/about">ABOUT</a></li>
+            <li><a href="/photos">PHOTOS</a></li>
+            <li><a href="/photos">TRAVEL <i class="fa fa-external-link"></i></a></li>
+        </ul>
+    </div>
 </div>
 
 <div class="container">
-    <div class="row">
-        <div class="sidebar">
-            <div class="list-group sidebar-menu">
-                <a href="/" class="list-group-item">Home</a>
-                <a href="/about" class="list-group-item">About</a>
-                <a href="/photos" class="list-group-item">Photos</a>
-                <a href="http://thedsoverseas.com" class="list-group-item" target="_blank">
-                    Travel <i class="fa fa-external-link"></i>
-                </a>
-            </div>
-        </div>
-        <div class="content">
-        {% block content %}
+    <div class="content">
+    {% block content %}
 
-        {% endblock %}
-        </div>
+    {% endblock %}
     </div>
 </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/featherlight.js"></script>
 </body>
 </html>
