Cheap image cache implementation
Created a command to generate an image cache class, just so I don't have to
perform disk lookups on every page load. Once I have a few hundred images,
that'll probably get expensive.

Also, do some cleanup to remove some code duplication with thumbnail name
generation.

--- a/src/Resources/views/photos.html.twig
+++ b/src/Resources/views/photos.html.twig
@@ -8,13 +8,19 @@
                 <li>Thailand</li>
                 <li>Cambodia</li>
                 <li>Laos</li>
-                <li>Vietname</li>
+                <li>Vietnam</li>
                 <li>Snowboarding</li>
             </ul>
         </div>
     </div>
     <div class="row">
-
+        {% for photo in photos %}
+            <div class="main-img-container">
+                <a href="{{ photo.displayName }}" class="thumbnail" data-featherlight="image">
+                    <img src="{{ photo.thumbnail }}" height="180px" />
+                </a>
+            </div>
+        {% endfor %}
         {% for i in 0..20 %}
             <div class="main-img-container">
                 <a href="#" class="thumbnail">
