First pass on about me

--- a/src/Resources/views/about.html.twig
+++ b/src/Resources/views/about.html.twig
@@ -10,10 +10,33 @@
     <div class="media-body">
         <h4 class="media-heading">About Me</h4>
         <p>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            Hello! You've made it to Fred Dysart's website. I am an application developer currently living in Atlanta, GA.
+
+            My programming interests range from developing full featured web applications, primarily in PHP and utilizing all
+            of the latest and greatest features that modern PHP provides, to writing performant service side applications in
+            a multitude of languages (Go, Java, Perl mostly).
+
+            The site you are currently reading was designed and built by me and the source is available
+            <a href="https://github.com/ftdysa/website"><i class="fa fa-github"></i> here</a>.
         </p>
         <p>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            Outside of work, I try to stay as active as possible. Just this past year my wife (Marilyn) and I embarked
+            on a journey throughout South East Asia for our delayed honeymoon. Our travels took us from Bangkok to Sapa
+            and just about everywhere in between. We blogged about the majority of our trip at
+            <a href="http://thedsoverseas.com" target="_blank" alt="Travel blog">thedsoverseas.com</a>.
+        </p>
+        <p>
+            Other than traveling, I've recently started attempting amateur (emphasis on amateur) photography which is the
+            main focus of this site, to share pictures with family and friends. I shoot with a Canon Rebel SL1 and am currently
+            experimenting with a few lenses.
+        </p>
+        <p>
+            Most of my photography focuses on the activities that my wife and I enjoy. These may include: snowboarding, traveling,
+            hiking, exploring, and everything in between.
+        </p>
+        <p>
+            Enjoy! <br>
+            - Fred Dysart
         </p>
     </div>
 </div>
