Pull in masonry to make it look good
This pulls in masonry to layout the images in a not-so-boring way. Also
update about page and make a first pass at making the site responsive.

Still a lot of cleanup that should be done. Currently the thumbnail
sizes are hardcoded which should be fixed but this works for now.

--- a/src/Resources/views/about.html.twig
+++ b/src/Resources/views/about.html.twig
@@ -4,7 +4,9 @@
 <div class="media">
     <div class="media-left">
         <a href="#">
-            <div class="media-object placeholder-img-med"></div>
+            <div class="media-object profile-image">
+                <img src="images/fred_profile.jpg" />
+            </div>
         </a>
     </div>
     <div class="media-body">
@@ -13,18 +15,21 @@
             Hello! You've made it to Fred Dysart's website. I am an application developer currently living in Atlanta, GA.
         </p>
         <p>
-            My programming interests range from developing full featured web applications, primarily in PHP and utilizing all
-            of the latest and greatest features that modern PHP provides, to writing performant service side applications in
-            a multitude of languages (Go, Java, Perl mostly).
+            My programming interests mainly focus on solving real problems for real people. Whether that may be building
+            a full featured CRM in PHP to allow a company to go about their day to day business, or writing a scalable
+            system for monitoring thousands of different devices. I've worn many different hats in my career thus far.
         </p>
         <p>
             The site you are currently reading was designed and built by me and the source is available
-            <a href="https://github.com/ftdysa/website"><i class="fa fa-github"></i> here</a>.
+            <a href="https://github.com/ftdysa/website"><i class="fa fa-github"></i> here</a>. The javascript powering
+            the image layouts is called Masonry (and I can take no credit for it). You can check that out
+            <a href="http://masonry.desandro.com/">here</a>.
         </p>
         <p>
-            Outside of work, I try to stay as active as possible. Just this past year my wife (Marilyn) and I embarked
-            on a journey throughout South East Asia for our delayed honeymoon. Our travels took us from Bangkok to Sapa
-            and just about everywhere in between. We blogged about the majority of our trip at
+            Outside of work, my interests focus on getting outdoors and exploring the world. Just this past year my wife,
+            Marilyn, and I embarked on a several month long journey throughout South East Asia. Our travels took us from
+            Bangkok, Thailand, to Kampot, Cambodia, to Hanoi, Vietnam and just about every mountain, beach, and city
+            between. We blogged about the majority of our trip at
             <a href="http://thedsoverseas.com" target="_blank" alt="Travel blog">thedsoverseas.com</a>.
         </p>
         <p>
@@ -33,11 +38,11 @@
             experimenting with a few lenses.
         </p>
         <p>
-            Most of my photography focuses on the activities that my wife and I enjoy. These may include: snowboarding, traveling,
-            hiking, exploring, and everything in between.
+            To unwind, I enjoy playing video games. These days I've been playing a lot of Counterstrike: Global Offensive
+            and have also recently tried picking up Dota 2/League of Legends (I'm pretty terrible).
         </p>
         <p>
-            Enjoy! <br>
+            Thanks! <br>
             - Fred Dysart
         </p>
     </div>
