--- a/src/Resources/less/layout.less
+++ b/src/Resources/less/layout.less
@@ -8,10 +8,8 @@ body {
   margin-top: 0;
 }
 
-.placeholder-img-full {
-  width: 100%;
-  height: 180px;
-  background-color: #f2f2f2;
+.profile-image {
+  width: 360px;
 }
 
 .placeholder-img-med {
