--- a/src/Resources/views/home.html.twig
+++ b/src/Resources/views/home.html.twig
@@ -1,18 +1,5 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <div class="row">
-        <div class="main-img-container">
-            <a href="images/keystone.jpg" class="thumbnail" data-featherlight="image">
-                <img src="images/keystone.jpg" height="180px" />
-            </a>
-        </div>
-    {% for i in 0..20 %}
-        <div class="main-img-container">
-            <a href="#" class="thumbnail">
-                <div class="placeholder-img-full"></div>
-            </a>
-        </div>
-    {% endfor %}
-    </div>
+    {% include 'masonry_layout.html.twig' with { photos: photos } %}
 {% endblock %}
