--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -14,20 +14,30 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/featherlight.js"></script>
+    <script src="js/masonry.pkgd.min.js"></script>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
 </head>
 <body>
 
-<div class="header">
-    <div class="brand">
-        <a href="/" alt="Fred Dysart">FRED DYSART</a>
-    </div>
+<div class="container header">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="brand">
+                <a href="/" alt="Fred Dysart">FRED DYSART</a>
+            </div>
 
-    <div class="links">
-        <ul class="list-inline">
-            <li><a href="/about">ABOUT</a></li>
-            <li><a href="/photos">PHOTOS</a></li>
-            <li><a href="/photos">TRAVEL <i class="fa fa-external-link"></i></a></li>
-        </ul>
+            <div class="links">
+                <ul class="list-inline">
+                    <li><a href="/about">ABOUT</a></li>
+                    <li><a href="/photos">PHOTOS</a></li>
+                    <li><a href="/photos">TRAVEL <i class="fa fa-external-link"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -39,9 +49,7 @@
     </div>
 </div>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/featherlight.js"></script>
+{% block javascripts %}
+{% endblock %}
 </body>
 </html>
